[gd_scene load_steps=8 format=3 uid="uid://bammlbv78l1h8"]

[ext_resource type="Script" path="res://scripts/cinematic_animation.gd" id="1_30nug"]
[ext_resource type="Texture2D" uid="uid://bjrub7u0hma2l" path="res://sprites/cinematica1.jpg" id="1_kt0uc"]
[ext_resource type="Texture2D" uid="uid://b4ol13sxfew4s" path="res://sprites/cinematica2.jpg" id="2_wswqx"]
[ext_resource type="Texture2D" uid="uid://cyo7nukfkb015" path="res://sprites/cinematica3.jpg" id="3_ii6yt"]
[ext_resource type="Texture2D" uid="uid://d3so6rkpxlt3d" path="res://sprites/cinematica4.jpg" id="4_01y11"]
[ext_resource type="Script" path="res://scripts/exit_script.gd" id="6_wqwha"]

[sub_resource type="SpriteFrames" id="SpriteFrames_i6qi2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_kt0uc")
}, {
"duration": 5.0,
"texture": ExtResource("1_kt0uc")
}, {
"duration": 5.0,
"texture": ExtResource("2_wswqx")
}, {
"duration": 5.0,
"texture": ExtResource("3_ii6yt")
}, {
"duration": 5.0,
"texture": ExtResource("4_01y11")
}],
"loop": false,
"name": &"default",
"speed": 2.0
}]

[node name="InitialCinematic" type="Node2D"]
script = ExtResource("1_30nug")

[node name="Node" type="Node" parent="."]
script = ExtResource("6_wqwha")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_i6qi2")
centered = false

[node name="SfxPlayer" type="AudioStreamPlayer2D" parent="."]
volume_db = 10.0
max_polyphony = 3

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="sprite_frames_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_sprite_frames_changed"]
[connection signal="finished" from="SfxPlayer" to="." method="_on_sfx_player_finished"]
